@@ -47,7 +47,7 @@
 
 <addon
   id="plugin.video.videodevil"
-  version="1.6.6"
+  version="1.6.7"
   name="VideoDevil"
   provider-name="sfaxman / bootsy">
   <requires>
@@ -60,7 +60,8 @@
   </extension>
   <extension point="xbmc.addon.metadata">
     <summary>Play videos from different adult streaming sites</summary>
-    <description></description>
+    <description>This addon plays videos from YouPorn, Tube8, Boysfood, MoviesAnd, PornoTube, xHamster, KeezMovies and some other adult streaming sites. It contains explicit adult material. You may only view this addon if you are at least 18 years of age, or at least the age of majority in the jurisdiction where you reside or from which you access this content. If you do not meet these requirements, then you do not have permission to use this addon.</description>
+    <disclaimer>The author does not host or distribute any of the content displayed by this addon. The author does not have any affiliation with the content provider.</disclaimer>
     <platform>all</platform>
   </extension>
 </addon>
