@@ -3,6 +3,7 @@
     <string id="30000">VideoDevil</string>
     <string id="30001">XBMC Media Center</string>
 
+    <string id="20191">Activer le mode débogue</string>
     <string id="30002">Désactiver la clause de non-responsabilité</string>
     <string id="30003">Type du lecteur</string>
     <string id="30004">Auto</string>
