@@ -3,6 +3,7 @@
     <string id="30000">VideoDevil</string>
     <string id="30001">XBMC Media Center</string>
 
+    <string id="20191">Debug-Logging aktivieren</string>
     <string id="30002">Deaktiviere den Haftungsausschluss</string>
     <string id="30003">Player Type</string>
     <string id="30004">Auto</string>
